<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qxz_app_name">7XZSDKDemo</string>
    <string name="qxz_cancel">取消</string>
    <string name="qxz_constomer">联系客服</string>
    <string name="qxz_crop">调整位置</string>
    <string name="qxz_gift_record">礼包记录</string>
    <string name="qxz_login">登录游戏</string>
    <string name="qxz_login_account_number">请输入七果ID/手机号/帐号</string>
    <string name="qxz_login_dynamic_login">动态密码登录</string>
    <string name="qxz_login_indentify_code_get">获取验证码</string>
    <string name="qxz_login_indentify_code_hint">请输入验证码</string>
    <string name="qxz_login_input_password">请输入密码</string>
    <string name="qxz_login_phonenumber_hint">请输入手机号</string>
    <string name="qxz_login_title">动态密码登录(无需注册)</string>
    <string name="qxz_login_use_password">帐号密码登录</string>
    <string name="qxz_pay_center_title">七果平台充值中心</string>
    <string name="qxz_pay_confirm">确认支付</string>
    <string name="qxz_pay_confirm_title">支付确认</string>
    <string name="qxz_pay_coupons">使用代金券：</string>
    <string name="qxz_pay_goto">前往充值</string>
    <string name="qxz_picture">图片</string>
    <string name="qxz_platform_money">平台币</string>
    <string name="qxz_text_customer_contact">"客服小x QQ:1234567980
客服小x QQ:1234567980
客服小x QQ:1234567980
平台用户交流1群 群号:7654321
平台用户交流2群 群号:8765432"</string>
    <string name="qxz_text_ths">感谢您对本平台的支持，若在使用过程中遇到问题，请联系客服</string>
    <string name="qxz_user_info">个人信息</string>
</resources>
